--- a/src/package.json
+++ b/src/package.json
@@ -4,11 +4,14 @@
   "description": "sqlpage spreadsheet component",
   "source": "./spreadsheet_component.html",
   "scripts": {
-    "build": "parcel build"
+    "build": "parcel build",
+    "check": "biome check",
+    "format": "biome format --write"
   },
   "author": "",
   "license": "AGPL-3.0-or-later",
   "devDependencies": {
+    "@biomejs/biome": "1.9.2",
     "buffer": "^6.0.3",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
