--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,4 @@ jobs:
         run: npm install
 
       - name: Check
-        run: npm run check
-
-      - name: Build
-        run: npm run build
+        run: npm run ci
