--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@univerjs/sheets": "^0.2.15",
     "@univerjs/sheets-formula": "^0.2.15",
     "@univerjs/sheets-ui": "^0.2.15",
-    "@univerjs/ui": "^0.2.15"
+    "@univerjs/ui": "^0.2.15",
+    "zod": "^3.23.8"
   }
 }
