move source to src and reenable biome

--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,21 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.2/schema.json",
-	"files": {
-		"include": ["src/spreadsheet.ts"]
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true
-		}
-	}
+  "$schema": "https://biomejs.dev/schemas/1.9.2/schema.json",
+  "files": {
+    "ignore": ["node_modules", "dist", "build", "coverage"]
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "suspicious": {
+        "noExplicitAny": "off"
+      }
+    }
+  },
+  "formatter": {
+    "enabled": true,
+    "indentWidth": 2,
+    "indentStyle": "space",
+    "lineEnding": "lf"
+  }
 }
