--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@univerjs/*": ["node_modules/@univerjs/*/lib/types"]
-    },
-    "skipLibCheck": true,
-    "noEmit": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
-  },
-  "include": ["**/*.ts"],
-  "exclude": ["node_modules"]
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@univerjs/*": ["node_modules/@univerjs/*/lib/types"]
+		},
+		"skipLibCheck": true,
+		"noEmit": true,
+		"strict": true,
+		"esModuleInterop": true,
+		"moduleResolution": "Bundler",
+		"module": "esnext",
+		"noUnusedLocals": true,
+		"noUnusedParameters": true
+	},
+	"include": ["**/*.ts"],
+	"exclude": ["node_modules"]
 }
