--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.9.2/schema.json",
 	"files": {
-		"ignore": ["node_modules", "dist", "build", "coverage"]
+		"ignore": ["node_modules", "dist", "build", "coverage", "demo"]
 	},
 	"linter": {
 		"enabled": true,
