--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,56 +42,41 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
+        run: |
+          npx parcel build --public-url /dist/
+          cp dist/spreadsheet_component.html spreadsheet.dist.handlebars
+          npx parcel build --public-url https://lovasoa.github.io/sqlpage-spreadsheet/dist/
+          cp dist/spreadsheet_component.html spreadsheet.handlebars
 
       - name: Create Release ZIP
         run: |
           mkdir -p release/dist
           cp -r dist/* release/dist/
           mkdir -p release/sqlpage/templates
-          cp dist/spreadsheet_component.html release/sqlpage/templates/spreadsheet.handlebars
+          cp spreadsheet.dist.handlebars release/sqlpage/templates/spreadsheet.handlebars
           cd release
           zip -r ../release.zip .
 
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            release.zip
+            spreadsheet.handlebars
+            README.md
+          body: |
+            To install the Spreadsheet component:
+            
+            Copy the spreadsheet.handlebars file to your project's 'sqlpage/templates' directory.
+            You can then use the component in your SQLPage project with `select 'spreadsheet' as component`.
+
+            The default distribution downloads the spreadsheet assets at runtime from the internet.
+            If you want to install the component entirely offline, you can use the `release.zip` distribution:
+            1. Unzip the release.zip file
+            2. Copy the contents of the 'dist' folder to a 'dist' directory at the root of your project
+            3. Copy 'sqlpage/templates/spreadsheet.handlebars' to your project's 'sqlpage/templates' directory
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./release.zip
-          asset_name: release.zip
-          asset_content_type: application/zip
-
-      - name: Create README.md
-        run: |
-          echo "# Spreadsheet Component Installation" > README.md
-          echo "" >> README.md
-          echo "To install the Spreadsheet component:" >> README.md
-          echo "1. Unzip the release.zip file" >> README.md
-          echo "2. Copy the contents of the 'dist' folder to your project's 'dist' directory" >> README.md
-          echo "3. Copy 'sqlpage/templates/spreadsheet.handlebars' to your project's 'sqlpage/templates' directory" >> README.md
-
-      - name: Upload README.md
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./README.md
-          asset_name: README.md
-          asset_content_type: text/markdown
 
       - name: Deploy to GitHub Pages
         run: |
@@ -99,7 +84,6 @@ jobs:
           git config --global user.email 'github-actions@users.noreply.github.com'
           git checkout --orphan gh-pages
           git rm -rf .
-          cp -r dist/* .
-          git add .
+          git add dist
           git commit -m "Deploy to GitHub Pages"
-          git push -f origin gh-pages
+          git push -f origin gh-pages:gh-pages
