add csp nonce when needed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,10 @@ jobs:
       - name: Build
         run: |
           npx parcel build --public-url /dist/
+          ./add_csp_nonce.sh
           cp dist/spreadsheet_component.html spreadsheet.dist.handlebars
           npx parcel build --public-url https://lovasoa.github.io/sqlpage-spreadsheet/${{ steps.get_version.outputs.VERSION }}/dist/
+          ./add_csp_nonce.sh
           cp dist/spreadsheet_component.html spreadsheet.handlebars
 
       - name: Create Release ZIP
